@@ -17,6 +17,11 @@
  */
 package org.apache.hadoop.hdfs.protocol;
 
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+
+import org.apache.hadoop.io.Writable;
 
 /**
  * 
@@ -31,12 +36,11 @@ public interface DataTransferProtocol {
    * when protocol changes. It is not very obvious. 
    */
   /*
-   * Version 16:
-   *    Datanode now needs to send back a status code together 
-   *    with firstBadLink during pipeline setup for dfs write
-   *    (only for DFSClients, not for other datanodes).
+   * Version 18:
+   *    Change the block packet ack protocol to include seqno,
+   *    numberOfReplies, reply0, reply1, ...
    */
-  public static final int DATA_TRANSFER_VERSION = 16;
+  public static final int DATA_TRANSFER_VERSION = 17;
 
   // Processed at datanode stream-handler
   public static final byte OP_WRITE_BLOCK = (byte) 80;
@@ -57,6 +61,97 @@ public interface DataTransferProtocol {
   public static final int OP_STATUS_ERROR_ACCESS_TOKEN = 5;
   public static final int OP_STATUS_CHECKSUM_OK = 6;
 
+  /** reply **/
+  public static class PipelineAck implements Writable {
+    private long seqno;
+    private short replies[];
+    final public static PipelineAck HEART_BEAT = new PipelineAck(-1, new short[0]);
 
+    /** default constructor **/
+    public PipelineAck() {
+    }
 
+    /**
+     * Constructor
+     * @param seqno sequence number
+     * @param replies an array of replies
+     */
+    public PipelineAck(long seqno, short[] replies) {
+      this.seqno = seqno;
+      this.replies = replies;
+    }
+
+    /**
+     * Get the sequence number
+     * @return the sequence number
+     */
+    public long getSeqno() {
+      return seqno;
+    }
+
+    /**
+     * Get the number of replies
+     * @return the number of replies
+     */
+    public short getNumOfReplies() {
+      return (short)replies.length;
+    }
+
+    /**
+     * get the ith reply
+     * @return the the ith reply
+     */
+    public short getReply(int i) {
+      return replies[i];
+    }
+
+    /**
+     * Check if this ack contains error status
+     * @return true if all statuses are SUCCESS
+     */
+    public boolean isSuccess() {
+      for (short reply : replies) {
+        if (reply != OP_STATUS_SUCCESS) {
+          return false;
+        }
+      }
+      return true;
+    }
+
+    /**** Writable interface ****/
+    @Override // Writable
+    public void readFields(DataInput in) throws IOException {
+      seqno = in.readLong();
+      short numOfReplies = in.readShort();
+      replies = new short[numOfReplies];
+      for (int i=0; i<numOfReplies; i++) {
+        replies[i] = in.readShort();
+      }
+    }
+
+    @Override // Writable
+    public void write(DataOutput out) throws IOException {
+      //WritableUtils.writeVLong(out, seqno);
+      out.writeLong(seqno);
+      out.writeShort((short)replies.length);
+      for(short reply : replies) {
+        out.writeShort(reply);
+      }
+    }
+
+    @Override //Object
+    public String toString() {
+      StringBuilder ack = new StringBuilder("Replies for seqno ");
+      ack.append( seqno ).append( " are" );
+      for(short reply : replies) {
+        ack.append(" ");
+        if (reply == OP_STATUS_SUCCESS) {
+          ack.append("SUCCESS");
+        } else {
+          ack.append("FAILED");
+        }
+      }
+      return ack.toString();
+    }
+  }
 }
